--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@googleapis/books": "^4.0.0",
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
